--- a/introduction.tex
+++ b/introduction.tex
@@ -62,6 +62,8 @@ In this thesis, we use the following notations:
 	\item Frobenius norm: ${\lVert \cdot \rVert}_{\text{F}}$
 	\item  Manifold of orthogonal matrices: $ O_d(\mathbb{R})$
 	\item Language model for source and target size: $\textbf{LM}_f$, $\textbf{LM}_e$
+	\item Similarity matrices for source and target respectively: $M_F$,$M_E$
+	\item Vocabulary size for most frequent words ${\lvert \tilde{V} \rvert}$
 \end{itemize}
 
 
