--- a/references.bib
+++ b/references.bib
@@ -408,3 +408,28 @@
 	journal={arXiv preprint arXiv:1702.03859},
 	year={2017}
 }
+
+@article{barone2016towards,
+	title={Towards cross-lingual distributed representations without parallel text trained with adversarial autoencoders},
+	author={Barone, Antonio Valerio Miceli},
+	journal={arXiv preprint arXiv:1608.02996},
+	year={2016}
+}
+
+@inproceedings{hauer2017bootstrapping,
+	title={Bootstrapping unsupervised bilingual lexicon induction},
+	author={Hauer, Bradley and Nicolai, Garrett and Kondrak, Grzegorz},
+	booktitle={Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics: Volume 2, Short Papers},
+	volume={2},
+	pages={619--624},
+	year={2017}
+}
+
+@inproceedings{heafield2011kenlm,
+	title={KenLM: Faster and smaller language model queries},
+	author={Heafield, Kenneth},
+	booktitle={Proceedings of the Sixth Workshop on Statistical Machine Translation},
+	pages={187--197},
+	year={2011},
+	organization={Association for Computational Linguistics}
+}
