--- a/references.bib
+++ b/references.bib
@@ -433,3 +433,11 @@
 	year={2011},
 	organization={Association for Computational Linguistics}
 }
+
+
+@article{hieber2017sockeye,
+	title={Sockeye: A toolkit for neural machine translation},
+	author={Hieber, Felix and Domhan, Tobias and Denkowski, Michael and Vilar, David and Sokolov, Artem and Clifton, Ann and Post, Matt},
+	journal={arXiv preprint arXiv:1712.05690},
+	year={2017}
+}
